# agatedb

./: Cargo.toml  Makefile
agate_bench/: Cargo.toml
agate_bench/src/: main.rs
examples/: cli.rs  readme.md
examples/adb/: Cargo.toml  readme.md
examples/adb/src/: main.rs
src/: db.rs  lib.rs
src/db/: opt.rs  tests.rs
