[package]
name = "adb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = { version = "3.2.8", features = ["cargo"] }
agatedb = { path = "../.." }
paste = "1.0.7"
anyhow = "1.0.58"
bytes = "1.1.0"

[dev-dependencies]
